--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,18 @@
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.8
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
+attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
+discord.py==2.4.0
 dnspython==2.7.0
 email_validator==2.2.0
-fastapi==0.115.5
+fastapi==0.111.0
 fastapi-cli==0.0.5
+frozenlist==1.5.0
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.7
@@ -15,10 +21,15 @@ httpx==0.28.0
 idna==3.10
 indexed==1.3.0
 Jinja2==3.1.4
+loguru==0.7.2
 lxml==5.3.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+multidict==6.1.0
+ngrok==1.3.0
+orjson==3.10.15
+propcache==0.2.0
 pydantic==2.10.2
 pydantic_core==2.27.1
 Pygments==2.18.0
@@ -30,12 +41,14 @@ rich==13.9.4
 shellingham==1.5.4
 sniffio==1.3.1
 SQLAlchemy==2.0.36
-starlette==0.41.3
+starlette==0.37.2
 steamsignin==1.1.1
 typer==0.13.1
 typing_extensions==4.12.2
+ujson==5.10.0
 urllib3==2.2.3
-uvicorn==0.32.1
+uvicorn==0.29.0
 uvloop==0.21.0
 watchfiles==1.0.0
 websockets==14.1
+yarl==1.18.0
