--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,11 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
 attrs==24.2.0
+beautifulsoup4==4.13.3
+blinker==1.9.0
+bs4==0.0.2
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
 discord.py==2.4.0
@@ -12,14 +16,17 @@ dnspython==2.7.0
 email_validator==2.2.0
 fastapi==0.111.0
 fastapi-cli==0.0.5
+Flask==3.1.0
 frozenlist==1.5.0
 greenlet==3.1.1
+gunicorn==23.0.0
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
 httpx==0.28.0
 idna==3.10
 indexed==1.3.0
+itsdangerous==2.2.0
 Jinja2==3.1.4
 loguru==0.7.2
 lxml==5.3.0
@@ -29,10 +36,14 @@ mdurl==0.1.2
 multidict==6.1.0
 ngrok==1.3.0
 orjson==3.10.15
+packaging==24.2
+pillow==11.1.0
 propcache==0.2.0
+pycparser==2.22
 pydantic==2.10.2
 pydantic_core==2.27.1
 Pygments==2.18.0
+PyNaCl==1.5.0
 python-dotenv==1.0.1
 python-multipart==0.0.18
 PyYAML==6.0.2
@@ -40,9 +51,11 @@ requests==2.32.3
 rich==13.9.4
 shellingham==1.5.4
 sniffio==1.3.1
+soupsieve==2.6
 SQLAlchemy==2.0.36
 starlette==0.37.2
 steamsignin==1.1.1
+toml==0.10.2
 typer==0.13.1
 typing_extensions==4.12.2
 ujson==5.10.0
@@ -51,4 +64,5 @@ uvicorn==0.29.0
 uvloop==0.21.0
 watchfiles==1.0.0
 websockets==14.1
+Werkzeug==3.1.3
 yarl==1.18.0
