--- a/config.toml
+++ b/config.toml
@@ -1,17 +1,8 @@
-api_url = ""
+api_url = "localhost"
 application_port = 80
-app_id = 0
-leaderboard_id = 0
+app_id = 2217000
+leaderboard_id = 16200142
 cache_update_interval = 120
 session_duration = 300
-# Discord Bot
 discord_token = ""
 test_guild = []
-[roles]
-  stone = 0
-  bronze = 0
-  silver = 0
-  gold = 0
-  platinum = 0
-  diamond = 0
-  master = 0
