--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,9 +15,16 @@ dependencies = [
 
 [dependency-groups]
 dev = [
+    "pytest>=8.4.0",
+    "pytest-asyncio>=1.0.0",
     "ruff>=0.11.13",
 ]
 
 [tool.ruff]
 line-length = 120
 fix=true
+
+[tool.pytest.ini_options]
+addopts = "-ra -q"
+testpaths = ["tests"]
+python_files = ["test_*.py"]
