--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ dependencies = [
     "fastapi>=0.115.12",
     "indexed>=1.3.0",
     "lxml>=5.4.0",
+    "python-dotenv>=1.2.1",
     "requests>=2.32.4",
     "sqlalchemy>=2.0.41",
     "steamsignin>=1.1.1",
