--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+# Configurable volume paths for Docker storage
+# If not set, defaults to ./.docker/data and ./.docker/logs
+DATA_PATH=./.docker/data
+LOGS_PATH=./.docker/logs
+
 # Discord bot token (required)
 DISCORD_TOKEN=
 
