feat: upgrade custom_logger

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,9 @@
 DATA_PATH=./.docker/data
 LOGS_PATH=./.docker/logs
 
+# Log level: 10=DEBUG, 20=INFO, 30=WARNING, 40=ERROR, 50=CRITICAL
+LOG_LEVEL=20
+
 # Discord bot token (required)
 DISCORD_TOKEN=
 
