--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "requests>=2.32.4",
     "sqlalchemy>=2.0.41",
     "steamsignin>=1.1.1",
+    "structlog>=25.5.0",
     "uvicorn>=0.34.3",
 ]
 
