--- a/requirements.txt
+++ b/requirements.txt
@@ -50,6 +50,8 @@ PyYAML==6.0.2
 requests==2.32.3
 rich==13.9.4
 shellingham==1.5.4
+structlog>=24.1.0
+colorama>=0.4.6
 sniffio==1.3.1
 soupsieve==2.6
 SQLAlchemy==2.0.36
